# BYDMate

./: README.md  note.md  plan.md
backend/: .gitignore  Cargo.toml
backend/app/: Cargo.toml
backend/app/src/: main.rs
backend/data_analyzer/: Dockerfile  go.mod  go.sum  main.go  mock_data.go  schema.sql
backend/data_pipeline/: Cargo.toml
backend/data_pipeline/src/: kafka_consumer.rs  kafka_producer.rs  mqtt_consumer.rs
backend/domain/: Cargo.toml
backend/domain/src/: models.rs
backend/mqtt_subscriber/: .gitignore  Dockerfile  go.mod  go.sum  main.go
backend/persistence/: Cargo.toml
backend/persistence/src/: lib.rs
carapp/: build-all.ps1  settings.gradle
carapp/app/: build.gradle
carapp/app/release/: output-metadata.json
carapp/gradle/: libs.versions.toml
carapp/gradle/wrapper/: gradle-wrapper.properties
carapp/server/: build.gradle  build.ps1  build.sh  check_apk.sh  deploy.ps1  deploy.sh  run.sh
docker/: .gitignore  docker-compose.yml  docker-compose.yml.backup  export_images.sh  import_images.sh  setup_volumes.sh  start.sh  stop.sh  vpn_for_docker.sh
docker/configuration/postgres/: schema.sql
frontend/: .gitignore  Dockerfile  index.html  package.json  tsconfig.app.json
frontend/src/: App.vue  amap.d.ts  main.ts
frontend/src/api/: index.d.ts  index.js  mock.js
frontend/src/components/: DataTable.vue  LineChart.vue  MapView.vue  TripList.vue
log/: data.txt  timedata.txt  type_and_keys.txt
tools/data_generator/: go.mod  go.sum  main.go
tools/mqtt_test_client/: data_generator.go  go.mod  go.sum  main.go
(+95 files in other folders)
