[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
data_pipeline = { path = "../data_pipeline" }
persistence = { path = "../persistence" }
domain = { path = "../domain" }
tokio = { version = "1", features = ["full"] }
rumqttc = "0.22"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
