[package]
name = "data_pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
rumqttc = "0.22"
rdkafka = { version = "0.28", features = ["cmake-build"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
domain = { path = "../domain" }
persistence = { path = "../persistence" }
